--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  syncfusion_flutter_gauges: ^19.4.56
+  syncfusion_flutter_charts: ^19.3.52
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
